test_scores/negative_dimers/features/P41212.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P41212.pkl.xz